[gd_scene load_steps=2 format=3 uid="uid://bvbqc6xseasqi"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_e2i36"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2i36")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 8.0
offset_right = 78.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.399998, 0.388235)

[node name="PlayAgainBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitBtn")
text = "Play Again
"

[node name="MainMenuBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayAgainBtn")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/PlayAgainBtn" to="." method="_on_play_again_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
